[bug 1465587] CSS fixes to get resizeable Columns working better: added table-layout:fixed, and removed overflow:hidden and white-space:nowrap. Updated README and Known Issues.

--- a/widget/datatable/src/css/datatable-core.css
+++ b/widget/datatable/src/css/datatable-core.css
@@ -1,6 +1,6 @@
 /*foundational css*/
-.yui-dt-table th, .yui-dt-table td {
-    overflow:hidden;
+table.yui-dt-table {
+    table-layout:fixed;
 }
 
 th .yui-dt-header {
